...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inputUsername"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:hint="Username *"
                android:inputType="text" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"

                android:hint="Password *"
                android:inputType="text" />
...
                android:id="@+id/themeButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="LAYOUT SELECTION" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="sign up" />

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="sign in" />
        </LinearLayout>

    </LinearLayout>
...
