...
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="9dp"
            />

        <fragment
            android:id="@+id/autocomplete_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="Enter City Name"
            android:inputType="text" />

        <Button
            android:id="@+id/buttonSaveCity"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="Save City"
            app:layout_constraintTop_toBottomOf="@+id/CityName" />


...
